--- a/recipes/creamy_pasta.html
+++ b/recipes/creamy_pasta.html
@@ -4,19 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Creamy Pasta</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
-    <h1>Creamy Pasta</h1>
+    <h1 id="recipe-title" class="creamy-pasta">Creamy Pasta</h1>
     
-    <p><a href="../index.html">Home</a></p>
+    <p>
+        <button><a href="../index.html">Home</a></button>
+    </p>
 
-    <img src="../img/creamy_pasta.png" alt="A bowl with spaghetti, creamy sauce with bacond and peper and some green herbs." height="310" width="310" >
+    <img src="../img/creamy_pasta.png" alt="A bowl with spaghetti, creamy sauce with bacond and peper and some green herbs." height="auto" width="310" >
 
     <h3>Description</h3>
-    <p>
+    <p class="text description">
         Pasta Nicole's mother used to make for here. It contains meat which is teribble and delicious.
-    </p>
-    <p>
         Disclaimer: meat can be replaced by fake meat.
     </p>
 
