--- a/recipes/mexican_pan.html
+++ b/recipes/mexican_pan.html
@@ -4,19 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mexican Pan</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
-    <h1>Mexican Pan</h1>
-    
-    <p><a href="../index.html">Home</a></p>
+    <h1 id="recipe-title" class="mexican-pan"> Mexican Pan</h1>
 
-    <img src="../img/mexican_pan.png" alt="A pan with a Mexican dish in there, with eggs, beans and avocado." height="310" width="410" >
+    <p>
+        <button><a href="../index.html">Home</a> </button>
+    </p>
+
+    <img src="../img/mexican_pan.png" alt="A pan with a Mexican dish in there, with eggs, beans and avocado." height="310" width="auto">
 
     <h3>Description</h3>
-    <p>
-        Knorr ft. de Hippe Vegetarier recipe.
-    </p>
-    <p>
+    <p class="text description">
+        Knorr ft. <strong>de Hippe Vegetarier</strong> recipe.
         Sort of shakshuka tomato sauce and Mexican spices with eggs, beans, avocado and cilantro. Sorry, the ingredients and steps are in Dutch.
     </p>
 
@@ -29,10 +30,10 @@
         <li>1 rode paprika, in blokjes</li>
         <li>1 gele paprika, in blokjes</li>
         <li>1 rode peper, in ringetjes</li>
-        <li>1 blik tomatenblokjes (400 gram)</li>
+        <li>1 blik tomatenblokjes <em>(400 gram)</em></li>
         <li>1 avocado, in plakjes</li>
         <li>2 takjes peterselie, grofgehakt</li>
-        <li>1 blik kidneybonen (225 gram)</li>
+        <li>1 blik kidneybonen <em>(225 gram)</em></li>
         <li>2 eieren</li>
         <li>2 eetlepels magere kwark</li>
         <li>1 eetlepel olijfolie</li>
