--- a/recipes/tuna_salad.html
+++ b/recipes/tuna_salad.html
@@ -4,13 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tuna Salad</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
-    <h1>Tuna Salad</h1>
+    <h1 id="recipe-title" class="tuna-salad">Tuna Salad</h1>
     
-    <p><a href="../index.html">Home</a></p>
+    <p>
+        <button><a href="../index.html">Home</a></button>
+    </p>
 
-    <img src="../img/tuna_salad.png" alt="A bowl with red onion, celery, mustard, mayonaise, tuna and dille." height="310" width="310" >
+    <img src="../img/tuna_salad.png" alt="A bowl with red onion, celery, mustard, mayonaise, tuna and dille." height="auto" width="310" >
 
     <h3>Description</h3>
     <p>
